# rocket-demo

./: .env  Cargo.toml  LICENSE  Rocket.toml
sql/: 0.1.1.sql
src/: connection.rs  lib.rs  main.rs  models.rs  schema.rs
src/controller/: frontend.rs
src/controller/backend/: index.rs
src/controller/frontend/: index.rs  user.rs
src/db/: app.rs
src/error/: catcher.rs
src/middleware/: counter.rs
src/provider/: admin_access_token.rs  admin_access_token_provider.rs  admin_provider.rs  last_insert_provider.rs
src/request/: admin_user.rs  api_user.rs  demo.rs  login_user.rs
src/response/: demo.rs  responder.rs  sample.rs
src/response/admin/: admin_token.rs
