[package]
name = "framework"
version = "0.1.0"
authors = ["zhixiong.zhu <zhixiong.zhu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = "*"
serde = "*"
serde_json = "*"
dashmap = "*"
#pcre2 = "*"
