[package]
name = "framework"
version = "0.1.0"
authors = ["zhixiong.zhu <zhixiong.zhu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_http = "=0.4.5"
rocket_contrib = {version="0.4.5", default-features=true, features=["diesel_mysql_pool"]}
serde = "*"
serde_json = "*"
serde_derive = "*"
dashmap = "*"
pcre2 = "*"
chrono = "*"
diesel = "*"
